--- a/About/directory.html
+++ b/About/directory.html
@@ -1038,7 +1038,7 @@
 			<div class="cell large-9">
 				<ul>
 					<li class="fn">Akira Wu</li>
-					<li class="title">Interlibrary Services &amp; Access Services</li>
+					<li class="title">Interlibrary Services</li>
 					<li class="phone"><a href="tel:+19362943578">936.294.3578</a></li>
 					<li class="email"><a href="mailto:ayw006@shsu.edu">ayw006@shsu.edu</a></li>
 				</ul>
