--- a/About/directory.html
+++ b/About/directory.html
@@ -203,7 +203,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="cell vcard">
+	<!--<div class="cell vcard">
 		<div class="grid-x">
 			<div class="cell large-3 hide-for-small-only">
 				<img src="/images/headshots/Crane.jpg" alt="Ashley Crane">
@@ -218,7 +218,7 @@
 				</ul>
 			</div>
 		</div>
-	</div>
+	</div> -->
 	<div class="cell vcard">
 		<div class="grid-x">
 			<div class="cell large-3 hide-for-small-only">
