--- a/Library Homepage/frontpage_accordions.html
+++ b/Library Homepage/frontpage_accordions.html
@@ -78,12 +78,12 @@
 				<p>Open access journals hosted by SHSU:</p>
 				<ul>
 					<li><a href="https://jbs-ojs-shsu.tdl.org/jbs/index.php/jbs/index">Journal of Business Strategies</a></li>
-					<li><a href="https://jbs-ojs-shsu.tdl.org/jbs/index.php/jbs/index">Journal of Instructional Techniques in Finance</a></li>
+					<li><a href="https://jitf-ojs-shsu.tdl.org/jitf">Journal of Instructional Techniques in Finance</a></li>
 					<li><a href="https://jmgr-ojs-shsu.tdl.org/jmgr/index.php/jmgr/index">Journal of Multidisciplinary Graduate Research</a></li>
 					<li><a href="https://journals.tdl.org/ugei/index.php/ugei/index">Journal of Universality of Global Education Issues</a></li>
 					<li><a href="https://journals.tdl.org/read/index.php/read/index">Read: An Online Journal for Literacy Educators</a></li>
 					<li><a href="https://secrj-ojs-shsu.tdl.org/secrj/index.php/secrj/index">Southeast Case Research Journal</a></li>
-					<li><a href="https://jmgr-ojs-shsu.tdl.org/jmgr/index.php/jmgr/index">Student Affairs on Campus</a></li>
+					<li><a href="https://saoc-ojs-shsu.tdl.org/saoc">Student Affairs on Campus</a></li>
 					<li><a href="https://journals.tdl.org/measure/index.php/measure/index">The Measure: An Undergraduate Research Journal</a></li>
 				</ul>
 			</div>
