--- a/About/policies.html
+++ b/About/policies.html
@@ -16,4 +16,4 @@
 <a href="https://www.shsu.edu/intranet/policies/documents/PRE-29+Prohibition+of+Discrimination.pdf">SHSU Non-Discrimination Policy</a><br />
 
 <br/>
-<a href="https://www.tsl.texas.gov/sites/default/files/public/tslac/slrm/state/schedules/753.PDF"><strong>SHSU Records Retention Policy</strong></a><br>
+<a href="https://www.tsl.texas.gov/sites/default/files/public/tslac/slrm/state/schedules/753.pdf"><strong>SHSU Records Retention Policy</strong></a><br>
