--- a/About/directory.html
+++ b/About/directory.html
@@ -299,6 +299,21 @@
 			</div>
 		</div>
 	</div>
+		<div class="cell vcard">
+		<div class="grid-x">
+			<div class="cell large-3 hide-for-small-only">
+				<img src="/dotAsset/42bd67d8-8688-4dc2-9817-1b722dfe876a.png" alt="Michelle McCrary">
+			</div>
+			<div class="cell large-9">
+				<ul>
+					<li class="fn">Michelle McCrary</li>
+					<li class="title">Head of Digital Initiatives</li>
+					<li class="phone"><a href="tel:+19362941623">936.294.1623</a></li>
+					<li class="email"><a href="mailto:lmm154@shsu.edu">lmm154@shsu.edu</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
 	<div class="cell vcard">
 		<div class="grid-x">
 			<div class="cell large-3 hide-for-small-only">
@@ -500,7 +515,7 @@
 			<div class="cell large-9">
 				<ul>
 					<li class="fn">Meredith Bassford</li>
-					<li class="title">Access Services</li>
+					<li class="title">Access Services Assistant Supervisor (Reserves)</li>
 					<li class="phone"><a href="tel:+19362941617">936.294.1617</a></li>
 					<!--<li class="email"><a href="mailto:alv007@shsu.edu">alv007@shsu.edu</a></li>-->
 				</ul>
@@ -590,7 +605,7 @@
 			<div class="cell large-9">
 				<ul>
 					<li class="fn">Crystal Dancer</li>
-					<li class="title">Access Services</li>
+					<li class="title">Access Services Supervisor</li>
 					<li class="phone"><a href="tel:+19362943893">936.294.3893</a></li>
 					<li class="email"><a href="mailto:crd005@shsu.edu">crd005@shsu.edu</a></li>
 				</ul>
@@ -605,7 +620,7 @@
 			<div class="cell large-9">
 				<ul>
 					<li class="fn">Ash Elliott</li>
-					<li class="title">Stacks Maintenance</li>
+					<li class="title">Access Services Assistant Supervisor (Stacks Maintenance)</li>
 					<li class="phone"><a href="tel:+19362943575">936.294.3575</a></li>
 					<li class="email"><a href="mailto:abe0130@SHSU.EDU">abe013@shsu.edu</a></li>
 				</ul>
@@ -620,7 +635,7 @@
 			<div class="cell large-9">
 				<ul>
 					<li class="fn">Sarah Greenmyer</li>
-					<li class="title">Interlibrary &amp; Copy Services</li>
+					<li class="title">Interlibrary & Copy Services Supervisor</li>
 					<li class="phone"><a href="tel:+19362941616">936.294.1616</a></li>
 					<li class="email"><a href="mailto:sarah.greenmyer@shsu.edu">sarah.greenmyer@shsu.edu</a></li>
 				</ul>
@@ -635,7 +650,7 @@
 			<div class="cell large-9">
 				<ul>
 					<li class="fn">Kaylyn Hagen</li>
-					<li class="title">Access Services</li>
+					<li class="title">Access Services Assistant Supervisor (Night Assistant)</li>
 					<!--<li class="phone"><a href="tel:+1936294xxxx">936.294.xxxx</a></li>-->
 					<li class="email"><a href="mailto:krh091@shsu.edu">krh091@shsu.edu</a></li>
 				</ul>
@@ -710,14 +725,14 @@
 			<div class="cell large-9">
 				<ul>
 					<li class="fn">Bridget Maloney</li>
-					<li class="title">Access Services</li>
+					<li class="title">Access Services Assistant Supervisor (Night Lead)</li>
 					<li class="phone"><a href="tel:+19362941653">936.294.1653</a></li>
 					<li class="email"><a href="mailto:sbm049@shsu.edu">sbm049@shsu.edu</a></li>
 				</ul>
 			</div>
 		</div>
 	</div>
-	<div class="cell vcard">
+	<!--<div class="cell vcard">
 		<div class="grid-x">
 			<div class="cell large-3 hide-for-small-only">
 				<img src="/dotAsset/42bd67d8-8688-4dc2-9817-1b722dfe876a.png" alt="Michelle McCrary">
@@ -731,7 +746,7 @@
 				</ul>
 			</div>
 		</div>
-	</div>
+	</div>-->
 <!--	<div class="cell vcard">
 		<div class="grid-x">
 			<div class="cell large-3 hide-for-small-only">
@@ -860,7 +875,7 @@
 			<div class="cell large-9">
 				<ul>
 					<li class="fn">Maddison Roberson</li>
-					<li class="title">Access Services</li>
+					<li class="title">Access Services Assistant Supervisor (Billing)</li>
 					<li class="phone"><a href="tel:+19362943948">936.294.3948</a></li>
 					<li class="email"><a href="mailto:mrr104@shsu.edu">mrr104@shsu.edu</a></li>
 				</ul>
@@ -875,7 +890,7 @@
 			<div class="cell large-9">
 				<ul>
 					<li class="fn">Danny Saheb</li>
-					<li class="title">Interlibrary Loan &amp; Copy Services</li>
+					<li class="title">Interlibrary & Copy Services Assistant Supervisor</li>
 					<li class="phone"><a href="tel:+19362941618">936.294.1653</a></li>
 					<li class="email"><a href="mailto:dansaheb066@shsu.edu">dansaheb066@shsu.edu</a></li>
 				</ul>
@@ -1025,6 +1040,7 @@
 				<ul>
 					<li class="fn">Jessica Welsch</li>
 					<li class="title">Archives</li>
+					<li class="phone"><a href="tel:+19362943317">936.294.3317</a></li>
 					<li class="email"><a href="mailto:jkw051@shsu.edu">jkw051@shsu.edu</a></li>
 				</ul>
 			</div>
@@ -1038,7 +1054,7 @@
 			<div class="cell large-9">
 				<ul>
 					<li class="fn">Akira Wu</li>
-					<li class="title">Interlibrary Services</li>
+					<li class="title">Interlibrary & Copy Services Assistant Supervisor</li>
 					<li class="phone"><a href="tel:+19362943578">936.294.3578</a></li>
 					<li class="email"><a href="mailto:ayw006@shsu.edu">ayw006@shsu.edu</a></li>
 				</ul>
