--- a/About/directory.html
+++ b/About/directory.html
@@ -530,7 +530,7 @@
 			<div class="cell large-9">
 				<ul>
 					<li class="fn">Laurie Baxter</li>
-					<li class="title">Cataloging</li>
+					<li class="title">Library Assistant II – Cataloging</li>
 					<li class="phone"><a href="tel:+19362943519">936.294.3519</a></li>
 					<li class="email"><a href="mailto:lab099@shsu.edu">lab099@shsu.edu</a></li>
 				</ul>
@@ -545,7 +545,7 @@
 			<div class="cell large-9">
 				<ul>
 					<li class="fn">Carlie Chapman</li>
-					<li class="title">Digital Initiatives</li>
+					<li class="title">Library Assistant II – Digital Initiatives</li>
 					<li class="phone"><a href="tel:+19362941628">936.294.1116</a></li>
 					<li class="email"><a href="mailto:cbc017@shsu.edu">cbc017@shsu.edu</a></li>
 				</ul>
@@ -560,7 +560,7 @@
 			<div class="cell large-9">
 				<ul>
 					<li class="fn">Christine Charles</li>
-					<li class="title">Acquisitions</li>
+					<li class="title">Library Assistant II – Acquisitions</li>
 					<li class="phone"><a href="tel:+19362943837">936.294.3837</a></li>
 					<li class="email"><a href="mailto:lcc042@SHSU.EDU">lcc042@shsu.edu</a></li>
 				</ul>
@@ -575,7 +575,7 @@
 			<div class="cell large-9">
 				<ul>
 					<li class="fn">Morgen Clements</li>
-					<li class="title">Archives</li>
+					<li class="title">Library Assistant II – Archives</li>
 					<li class="phone"><a href="tel:+19362943317">936.294.3317</a></li>
 					<li class="email"><a href="mailto:mxc098@shsu.edu">mxc098@shsu.edu</a></li>
 				</ul>
@@ -590,7 +590,7 @@
 			<div class="cell large-9">
 				<ul>
 					<li class="fn">Tanya Cook</li>
-					<li class="title">Cataloging</li>
+					<li class="title">Specialist IV – Library - Cataloging</li>
 					<li class="phone"><a href="tel:+19362943679">936.294.3679</a></li>
 					<li class="email"><a href="mailto:lib_tlc@shsu.edu">lib_tlc@shsu.edu</a></li>
 				</ul>
@@ -695,7 +695,7 @@
 			<div class="cell large-9">
 				<ul>
 					<li class="fn">Barbara Kievit-Mason</li>
-					<li class="title">Archives</li>
+					<li class="title">Specialist IV – Library - Archives</li>
 					<li class="phone"><a href="tel:+19362943699">936.294.3699</a></li>
 					<li class="email"><a href="mailto:lib_bak@shsu.edu">lib_bak@shsu.edu</a></li>
 				</ul>
@@ -770,7 +770,7 @@
 			<div class="cell large-9">
 				<ul>
 					<li class="fn">Lucy Mendoza</li>
-					<li class="title">Acquisitions &amp; Serials</li>
+					<li class="title">Library Associate – Acquisitions</li>
 					<li class="phone"><a href="tel:+19362941622">936.294.1622</a></li>
 					<li class="email"><a href="mailto:llc019@shsu.edu">llc019@shsu.edu</a></li>
 				</ul>
@@ -845,7 +845,7 @@
 			<div class="cell large-9">
 				<ul>
 					<li class="fn">Michelle Rainey</li>
-					<li class="title">Special Collections</li>
+					<li class="title">Library Associate – Special Collections</li>
 					<li class="phone"><a href="tel:+19362943859">936.294.3859</a></li>
 					<li class="email"><a href="mailto:dmr014@shsu.edu">dmr014@shsu.edu</a></li>
 				</ul>
@@ -860,7 +860,7 @@
 			<div class="cell large-9">
 				<ul>
 					<li class="fn">Rebecca Richie</li>
-					<li class="title">Digital Initiatives</li>
+					<li class="title">Library Assistant II – Digital Initiatives</li>
 					<li class="phone"><a href="tel:+19362941658">936.294.1658</a></li>
 					<li class="email"><a href="mailto:rlr073@shsu.edu">rlr073@shsu.edu</a></li>
 				</ul>
@@ -905,7 +905,7 @@
 			<div class="cell large-9">
 				<ul>
 					<li class="fn">Sarah Sellers</li>
-					<li class="title">Digital Initiatives</li>
+					<li class="title">Library Associate – Digital Initiatives</li>
 					<li class="phone"><a href="tel:+19362943784">936.294.3784</a></li>
 					<li class="email"><a href="mailto:sarah.sellers@shsu.edu">sarah.sellers@shsu.edu</a></li>
 				</ul>
@@ -935,7 +935,7 @@
 			<div class="cell large-9">
 				<ul>
 					<li class="fn">Cheryl Spencer</li>
-					<li class="title">Special Collections</li>
+					<li class="title">Library Assistant II – Special Collections</li>
 					<li class="phone"><a href="tel:+19362941619">936.294.1619</a></li>
 					<li class="email"><a href="mailto:lib_csp@shsu.edu">lib_csp@shsu.edu</a></li>
 				</ul>
@@ -980,7 +980,7 @@
 			<div class="cell large-9">
 				<ul>
 					<li class="fn">Stephen Strubing</li>
-					<li class="title">Cataloging</li>
+					<li class="title">Library Assistant II – Cataloging</li>
 					<li class="phone"><a href="tel:+19362941628">936.294.1628</a></li>
 					<li class="email"><a href="mailto:sks015@shsu.edu">sks015@shsu.edu</a></li>
 				</ul>
@@ -1039,7 +1039,7 @@
 			<div class="cell large-9">
 				<ul>
 					<li class="fn">Jessica Welsch</li>
-					<li class="title">Archives</li>
+					<li class="title">Library Assistant II – Archives</li>
 					<li class="phone"><a href="tel:+19362943317">936.294.3317</a></li>
 					<li class="email"><a href="mailto:jkw051@shsu.edu">jkw051@shsu.edu</a></li>
 				</ul>
