--- a/Services/UndergraduateStudentServices.html
+++ b/Services/UndergraduateStudentServices.html
@@ -5,7 +5,7 @@
 <p><a href="/services/renew.html">Renew Your Books Online</a></p>
 <p><a href="/services/bookhold.html">Hold a Book</a></p>
 <p><a href="/research/reserves.html">Course Reserves</a>: Materials placed on hold for a specific class</p>
-<p><a href="https://shsulibraryguides.org/servicehowto/summercard">Buy a Summer Card</a>: Students not enrolled for summer but wanting continued library privileges</p>
+<p><a href="https://shsulibraryguides.org/servicehowto/summercard">Request a Summer Extension</a>: Students not enrolled for summer but wanting continued library privileges</p>
 <p><a href="/services/distance/index.html">Distance Learning Services</a>: How to borrow from SHSU if you don't live locally</p>
 <h2>Borrowing from Other Libraries</h2>
 <p><a href="/services/ill.html">Interlibrary Loan:</a> Borrow from another library</p>
