--- a/About/subject_librarians.html
+++ b/About/subject_librarians.html
@@ -99,7 +99,7 @@
 <tbody>
   <tr>
     <td>Teaching and Learning</td>
-    <td>-</td>
+    <td rowspan="1"><a href="https://shsulibraryguides.org/prf.php?account_id=403193">Misty Schattle</td>
     <td>-</td>
     <td>-</td>
 		<td>-</a></td>
@@ -113,7 +113,7 @@
   </tr>
   <tr>
     <td>Counselor Education</td>
-    <td rowspan="2">-</td>
+    <td rowspan="2"><a href="https://shsulibraryguides.org/prf.php?account_id=403193">Misty Schattle</td>
     <td rowspan="2">-</td>
     <td rowspan="2">-</td>
 		<td rowspan="2">-</td>
@@ -290,7 +290,7 @@
   </tr>
   <tr>
     <td>Children's &amp; Juvenile Literature</td>
-    <td>-</td>
+    <td><a href="https://shsulibraryguides.org/prf.php?account_id=403193">Misty Schattle</td>
     <td>-</td>
     <td>-</td>
 		<td>-</td>
