--- a/Library Homepage/frontpage_accordions.html
+++ b/Library Homepage/frontpage_accordions.html
@@ -57,19 +57,22 @@
             <li><a href="https://digital.library.shsu.edu/digital/search/searchterm/John%20W.%20Thomason%20Collection/mode/exact">John W. Thomason Collection</a></li>
             <li><a href="https://digital.library.shsu.edu/digital/collection/p243vra">Breitenbach Mexican Mask Collection</a></li>
             <li><a href="https://digital.library.shsu.edu/digital/collection/p243coll1">University Archives</a></li>
-            <li><a href="https://digital.library.shsu.edu/digital/collection/p263501coll3/search/searchterm/recommended%20budget/field/title/mode/exact/conn/and/order/title/ad/desc">SHSU Recommended Budgets</a></li>
-            <li><a href="https://digital.library.shsu.edu/digital/collection/p15061coll2/search">Books & Bytes Library Newsletter Archive</a></li>
-            <li><a href="https://library.shsu.edu/about/departments/digitalcollections/yearbooks">SHSU Yearbooks</a></li>
+            <!--<li><a href="https://digital.library.shsu.edu/digital/collection/p263501coll3/search/searchterm/recommended%20budget/field/title/mode/exact/conn/and/order/title/ad/desc">SHSU Recommended Budgets</a></li>
+            <li><a href="https://digital.library.shsu.edu/digital/collection/p15061coll2/search">Books & Bytes Library Newsletter Archive</a></li>-->
+            <li><a href="https://digital.library.shsu.edu/digital/collection/Alcaldes-SHSU">SHSU Yearbooks</a></li>
           </ul>
         </div>
         <div class="cell medium-6">
           <p><a href="https://shsu-ir.tdl.org/"><strong>Scholarly Works @ SHSU</strong></a></p>
           <p>Papers, videos, and posters created by SHSU faculty and students, including:</p>
           <ul>
-              <li><a href="https://shsu-ir.tdl.org/handle/20.500.11875/18">Theses &amp; Dissertations</a></li>
-              <li><a href="https://shsu-ir.tdl.org/handle/20.500.11875/1">Faculty Research</a></li>
+              <li><a href="https://hdl.handle.net/20.500.11875/5">Theses &amp; Dissertations</a></li>
+              <!--<li><a href="https://shsu-ir.tdl.org/handle/20.500.11875/1">Faculty Research</a></li>
               <li><a href="https://shsu-ir.tdl.org/handle/20.500.11875/4">Conferences</a></li>
-              <li><a href="https://shsu-ir.tdl.org/handle/20.500.11875/75">LEMIT Papers</a></li>
+              <li><a href="https://shsu-ir.tdl.org/handle/20.500.11875/75">LEMIT Papers</a></li>-->
+	      <li><a href="https://hdl.handle.net/20.500.11875/4530">Scholarly Research</a></li>
+	      <li><a href="https://hdl.handle.net/20.500.11875/4517">Centers & Institutes</a></li>
+	      <li><a href="https://hdl.handle.net/20.500.11875/4712">SHSU Recommended Budgets</a></li>
           </ul>
         </div>
       </div>
