--- a/About/directory.html
+++ b/About/directory.html
@@ -346,6 +346,22 @@
 			</div>
 		</div>
 	</div>-->
+	<div class="cell vcard">
+		<div class="grid-x">
+			<div class="cell large-3 hide-for-small-only">
+				<img src="/images/headshots/norris.jpg" alt="MJ Norris">
+			</div>
+			<div class="cell large-9">
+				<ul>
+					<li class="fn">MJ Norris</li>
+					<li class="title">Instruction Librarian</li>
+					<li class="phone"><a href="tel:+19362944782">936.294.4782</a></li>
+					<li class="email"><a href="mailto:mjn036@shsu.edu">mjn036@shsu.edu</a></li>
+					<!--<li class="subject"></li>-->
+				</ul>
+			</div>
+		</div>
+	</div>
 <!--	<div class="cell vcard">
 		<div class="grid-x">
 			<div class="cell large-3 hide-for-small-only">
@@ -389,6 +405,22 @@
 					<li class="phone"><a href="tel:+19362941624">936.294.1624</a></li>
 					<li class="email"><a href="mailto:bxp040@shsu.edu">bxp040@shsu.edu</a></li>
 					<li class="subject">Computer Science</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div class="cell vcard">
+		<div class="grid-x">
+			<div class="cell large-3 hide-for-small-only">
+				<img src=" /images/headshots/schattle.jpg" alt="Rebecca Yantis">
+			</div>
+			<div class="cell large-9">
+				<ul>
+					<li class="fn">Misty Schattle</li>
+					<li class="title">Research & Instruction Librarian</li>
+					<li class="phone"><a href="tel:+19362944686">936.294.4686</a></li>
+					<li class="email"><a href="mailto:mschattle@shsu.edu">mschattle@shsu.edu</a></li>
+					<li class="subject">Counselor Education, Library Science & Technology, and School of Teaching & Learning</li>
 				</ul>
 			</div>
 		</div>
@@ -465,7 +497,7 @@
 			<div class="cell large-9">
 				<ul>
 					<li class="fn">Zach Valdes</li>
-					<li class="title">Head of Acquistions and Serials</li>
+					<li class="title">Head of Acquisitions and Serials</li>
 					<li class="phone"><a href="tel:+19362942512">936.294.2512</a></li>
 					<li class="email"><a href="mailto:zav001@shsu.edu">zav001@shsu.edu</a></li>
 				</ul>
@@ -507,21 +539,6 @@
 			</div>
 		</div>
 	</div>-->
-	<div class="cell vcard">
-		<div class="grid-x">
-			<div class="cell large-3 hide-for-small-only">
-				<img src="/dotAsset/42bd67d8-8688-4dc2-9817-1b722dfe876a.png" alt="Meredith Bassford">
-			</div>
-			<div class="cell large-9">
-				<ul>
-					<li class="fn">Meredith Bassford</li>
-					<li class="title">Access Services Assistant Supervisor (Reserves)</li>
-					<li class="phone"><a href="tel:+19362941617">936.294.1617</a></li>
-					<!--<li class="email"><a href="mailto:alv007@shsu.edu">alv007@shsu.edu</a></li>-->
-				</ul>
-			</div>
-		</div>
-	</div>
 	<div class="cell vcard">
 		<div class="grid-x">
 			<div class="cell large-3 hide-for-small-only">
@@ -575,7 +592,7 @@
 			<div class="cell large-9">
 				<ul>
 					<li class="fn">Morgen Clements</li>
-					<li class="title">Library Assistant II – Archives</li>
+					<li class="title">Library Assistant II – Special Collections</li>
 					<li class="phone"><a href="tel:+19362943317">936.294.3317</a></li>
 					<li class="email"><a href="mailto:mxc098@shsu.edu">mxc098@shsu.edu</a></li>
 				</ul>
@@ -615,11 +632,11 @@
 	<div class="cell vcard">
 		<div class="grid-x">
 			<div class="cell large-3 hide-for-small-only">
-				<img src="/dotAsset/42bd67d8-8688-4dc2-9817-1b722dfe876a.png" alt="Ash Elliott">
+				<img src="/dotAsset/42bd67d8-8688-4dc2-9817-1b722dfe876a.png" alt="Ethan Elliott">
 			</div>
 			<div class="cell large-9">
 				<ul>
-					<li class="fn">Ash Elliott</li>
+					<li class="fn">Ethan Elliott</li>
 					<li class="title">Access Services Assistant Supervisor (Stacks Maintenance)</li>
 					<li class="phone"><a href="tel:+19362943575">936.294.3575</a></li>
 					<li class="email"><a href="mailto:abe0130@SHSU.EDU">abe013@shsu.edu</a></li>
@@ -638,21 +655,6 @@
 					<li class="title">Interlibrary & Copy Services Supervisor</li>
 					<li class="phone"><a href="tel:+19362941616">936.294.1616</a></li>
 					<li class="email"><a href="mailto:sarah.greenmyer@shsu.edu">sarah.greenmyer@shsu.edu</a></li>
-				</ul>
-			</div>
-		</div>
-	</div>
-	<div class="cell vcard">
-		<div class="grid-x">
-			<div class="cell large-3 hide-for-small-only">
-				<img src="/dotAsset/42bd67d8-8688-4dc2-9817-1b722dfe876a.png" alt="Kaylyn Hagen">
-			</div>
-			<div class="cell large-9">
-				<ul>
-					<li class="fn">Kaylyn Hagen</li>
-					<li class="title">Access Services Assistant Supervisor (Night Assistant)</li>
-					<!--<li class="phone"><a href="tel:+1936294xxxx">936.294.xxxx</a></li>-->
-					<li class="email"><a href="mailto:krh091@shsu.edu">krh091@shsu.edu</a></li>
 				</ul>
 			</div>
 		</div>
@@ -698,6 +700,36 @@
 					<li class="title">Specialist IV – Library - Archives</li>
 					<li class="phone"><a href="tel:+19362943699">936.294.3699</a></li>
 					<li class="email"><a href="mailto:lib_bak@shsu.edu">lib_bak@shsu.edu</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<!--<div class="cell vcard">
+		<div class="grid-x">
+			<div class="cell large-3 hide-for-small-only">
+				<img src="/dotAsset/42bd67d8-8688-4dc2-9817-1b722dfe876a.png" alt="Trina Walker">
+			</div>
+			<div class="cell large-9">
+				<ul>
+					<li class="fn">Hannah Kissell</li>
+					<li class="title">Library Assistant II – Archives</li>
+					<!--<li class="phone"><a href="tel:+19362943317">936.294.3317</a></li>
+					<li class="email"><a href="mailto:jkw051@shsu.edu">jkw051@shsu.edu</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>-->
+	<div class="cell vcard">
+		<div class="grid-x">
+			<div class="cell large-3 hide-for-small-only">
+				<img src="/dotAsset/42bd67d8-8688-4dc2-9817-1b722dfe876a.png" alt="Isabel Kirwin">
+			</div>
+			<div class="cell large-9">
+				<ul>
+					<li class="fn">Isabel Kirwin</li>
+					<li class="title">Administration</li>
+					<li class="phone"><a href="tel:+19362941613">936.294.1613</a></li>
+					<li class="email"><a href="mailto:isabel@shsu.edu">isabel@shsu.edu</a></li>
 				</ul>
 			</div>
 		</div>
@@ -780,6 +812,21 @@
 	<div class="cell vcard">
 		<div class="grid-x">
 			<div class="cell large-3 hide-for-small-only">
+				<img src="/dotAsset/42bd67d8-8688-4dc2-9817-1b722dfe876a.png" alt="Tony Morales">
+			</div>
+			<div class="cell large-9">
+				<ul>
+					<li class="fn">Tony Morales</li>
+					<li class="title">Library Assistant II – Archives</li>
+					<!--<li class="phone"><a href="tel:+19362941622">936.294.1622</a></li>-->
+					<!--<li class="email"><a href="mailto:llc019@shsu.edu">llc019@shsu.edu</a></li>-->
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div class="cell vcard">
+		<div class="grid-x">
+			<div class="cell large-3 hide-for-small-only">
 				<img src="/images/headshots/myers.jpg" alt="Elissa Myers">
 			</div>
 			<div class="cell large-9">
@@ -837,6 +884,21 @@
 			</div>
 		</div>
 	</div>-->
+	<div class="cell vcard">
+		<div class="grid-x">
+			<div class="cell large-3 hide-for-small-only">
+				<img src="/dotAsset/42bd67d8-8688-4dc2-9817-1b722dfe876a.png" alt="Trina Walker">
+			</div>
+			<div class="cell large-9">
+				<ul>
+					<li class="fn">Ren Oliver</li>
+					<li class="title">Access Services Assistant Supervisor (Reserves)</li>
+					<li class="phone"><a href="tel:+19362941617">936.294.1617</a></li>
+					<li class="email"><a href="mailto:geo008@shsu.edu">geo008@shsu.edu</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
 	<div class="cell vcard">
 		<div class="grid-x">
 			<div class="cell large-3 hide-for-small-only">
@@ -957,7 +1019,7 @@
 			</div>
 		</div>
 	</div>-->
-	<div class="cell vcard">
+	<!--<div class="cell vcard">
 		<div class="grid-x">
 			<div class="cell large-3 hide-for-small-only">
 				<img src="/images/headshots/Stewart photo 154px.jpg" alt="Sunday Stewart-Smothers">
@@ -971,7 +1033,7 @@
 				</ul>
 			</div>
 		</div>
-	</div>
+	</div>-->
 	<div class="cell vcard">
 		<div class="grid-x">
 			<div class="cell large-3 hide-for-small-only">
@@ -1031,7 +1093,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="cell vcard">
+	<!--<div class="cell vcard">
 		<div class="grid-x">
 			<div class="cell large-3 hide-for-small-only">
 				<img src="/dotAsset/42bd67d8-8688-4dc2-9817-1b722dfe876a.png" alt="Trina Walker">
@@ -1045,7 +1107,7 @@
 				</ul>
 			</div>
 		</div>
-	</div>
+	</div>-->
 	<div class="cell vcard">
 		<div class="grid-x">
 			<div class="cell large-3 hide-for-small-only">
