--- a/About/directory.html
+++ b/About/directory.html
@@ -117,7 +117,7 @@
 	</div>
 </div>
 <div class="grid-x grid-margin-x medium-up-2">
-	<div class="cell vcard">
+	<!--<div class="cell vcard">
 		<div class="grid-x">
 			<div class="cell large-3 hide-for-small-only">
 				<img src="/images/headshots/Hanson.jpg" alt="Michael Hanson">
@@ -132,7 +132,7 @@
 				</ul>
 			</div>
 		</div>
-	</div>
+	</div>-->
 	<div class="cell vcard">
 		<div class="grid-x">
 			<div class="cell large-3 hide-for-small-only">
