--- a/About/subject_librarians.html
+++ b/About/subject_librarians.html
@@ -100,8 +100,8 @@
   <tr>
     <td>Teaching and Learning</td>
     <td rowspan="1"><a href="https://shsulibraryguides.org/prf.php?account_id=403193">Misty Schattle</td>
-    <td>-</td>
-    <td>-</td>
+    <td>4686</td>
+    <td><a href="mailto:mschattle@shsu.edu">mschattle@shsu.edu</a></td>
 		<td>-</a></td>
   </tr>
   <tr>
@@ -114,8 +114,8 @@
   <tr>
     <td>Counselor Education</td>
     <td rowspan="2"><a href="https://shsulibraryguides.org/prf.php?account_id=403193">Misty Schattle</td>
-    <td rowspan="2">-</td>
-    <td rowspan="2">-</td>
+    <td rowspan="2">4686</td>
+    <td rowspan="2"><a href="mailto:mschattle@shsu.edu">mschattle@shsu.edu</a></td>
 		<td rowspan="2">-</td>
   </tr>
   <tr><td>Library Science & Technology</td></tr>
@@ -180,10 +180,10 @@
   <tr><td>Sociology</td></tr>
   <tr>
     <td>World Languages & Cultures</td>
-    <td><a href="https://shsulibraryguides.org/prf.php?account_id=65390">Michael Hanson</td>
-    <td>1620</td>
-    <td><a href="mailto:hansonm@shsu.edu">hansonm@shsu.edu</a></td>
-		<td>-</td>
+    <td><a href="https://shsulibraryguides.org/prf.php?account_id=289261">Hannah Menendez</a></td>
+    <td>1520</td>
+    <td><a href="mailto:hmenendez@shsu.edu">hmenendez@shsu.edu</a></td>
+		<td><a href="https://shsu.libcal.com/appointments?u=87732">Schedule</a></td>
   </tr>
 </tbody>
 </table>
@@ -212,18 +212,12 @@
   </tr>
   <tr>
     <td>Mathematics and Statistics</td>
-    <td><a href="https://shsulibraryguides.org/prf.php?account_id=65390">Michael Hanson</td>
-    <td>1620</td>
-    <td><a href="mailto:hansonm@shsu.edu">hansonm@shsu.edu</a></td>
-		<td>-</td>
+    <td rowspan="5"><a href="https://shsulibraryguides.org/prf.php?account_id=171647">Stacy Johnson</td>
+    <td rowspan="5">1119</td>
+    <td rowspan="5"><a href="mailto:shjohnson@shsu.edu">shjohnson@shsu.edu</a></td>
+		<td rowspan="5"><a href="https://shsu.libcal.com/appointments?u=40626">Schedule</a></td>
   </tr>
-  <tr>
-    <td>Biological Sciences</td>
-    <td rowspan="4"><a href="https://shsulibraryguides.org/prf.php?account_id=171647">Stacy Johnson</td>
-    <td rowspan="4">1119</td>
-    <td rowspan="4"><a href="mailto:shjohnson@shsu.edu">shjohnson@shsu.edu</a></td>
-		<td rowspan="4"><a href="https://shsu.libcal.com/appointments?u=40626">Schedule</a></td>
-  </tr>
+  <tr><td>Biological Sciences</td></tr>
   <tr><td>Chemistry</td></tr>
   <tr><td>Engineering Technology</td></tr>
   <tr><td>Physics</td></tr>
@@ -291,8 +285,8 @@
   <tr>
     <td>Children's &amp; Juvenile Literature</td>
     <td><a href="https://shsulibraryguides.org/prf.php?account_id=403193">Misty Schattle</td>
-    <td>-</td>
-    <td>-</td>
+    <td>4686</td>
+    <td><a href="mailto:mschattle@shsu.edu">mschattle@shsu.edu</a></td>
 		<td>-</td>
   </tr>
   <tr>
