--- a/About/SPCA_staff.html
+++ b/About/SPCA_staff.html
@@ -8,8 +8,11 @@
 936-294-3859<br/>
 <a href="mailto:dmr014@shsu.edu">dmr014@shsu.edu</a></p>
 <p><strong>Morgen Clements</strong>, Library Assistant II Archives<br/>
-936-294-3317<br/>
+936-294-43017<br/>
 <a href="mailto:mxc098@shsu.edu">mxc098@shsu.edu</a></p>
+<p><strong>Tony Morales</strong>, Library Assistant II Archives<br/>
+936-294-3317<br/>
+<a href="mailto:btm022@shsu.edu">btm0228@shsu.edu</a></p>
 <p><strong>Cheryl Spencer</strong>, Special Collections Project Specialist<br/>
 936-294-1619<br/>
 <a href="mailto:cspencer@shsu.edu">cspencer@shsu.edu</a></p>
