--- a/About/SPCA_staff.html
+++ b/About/SPCA_staff.html
@@ -7,7 +7,7 @@
 <p><strong>Deanna Rainey</strong>, Library Associate Special Collections<br/>
 936-294-3859<br/>
 <a href="mailto:dmr014@shsu.edu">dmr014@shsu.edu</a></p>
-<p><strong>Morgen Clements</strong>, Library Assistant II Archives<br/>
+<p><strong>Morgen Clements</strong>, Library Assistant II Special Collections<br/>
 936-294-3859<br/>
 <a href="mailto:mxc098@shsu.edu">mxc098@shsu.edu</a></p>
 <p><strong>Tony Morales</strong>, Library Assistant II Archives<br/>
