--- a/About/directory.html
+++ b/About/directory.html
@@ -133,6 +133,23 @@
 			</div>
 		</div>
 	</div>-->
+		<div class="cell vcard">
+		<div class="grid-x">
+			<div class="cell large-3 hide-for-small-only">
+				<img src="/images/headshots/Shotwell.jpg" alt="Trent Shotwell">
+			</div>
+			<div class="cell large-9">
+				<ul>
+					<li class="fn">Trent Shotwell</li>
+					<li class="title">Interim Director of Library Technical Services</li>
+					<li class="title">Head of Special Collections & Archives</li>
+										<li class="phone"><a href="tel:+19362943290">936.294.3290</a></li>
+					<li class="email"><a href="mailto:stshotwell@shsu.edu">stshotwell@shsu.edu</a></li>
+					<li class="subject">Special Collections, Texana</li>
+				</ul>
+			</div>
+		</div>
+	</div>
 	<div class="cell vcard">
 		<div class="grid-x">
 			<div class="cell large-3 hide-for-small-only">
@@ -144,7 +161,7 @@
 					<li class="title">Director of Library Public Services</li>
 					<li class="phone"><a href="tel:+19362943587">936.294.3587</a></li>
 					<li class="email"><a href="mailto:lshen@shsu.edu">lshen@shsu.edu</a></li>
-					<li class="subject">Business</li>
+					<li class="subject">College of Business Administration</li>
 					<li class="profilelink"><a href="https://shsulibraryguides.org/prf.php?account_id=2233">Lisa S.'s Profile Page</a></li>
 				</ul>
 			</div>
@@ -261,7 +278,7 @@
 					<li class="title">Research & Instruction Librarian</li>
 					<li class="phone"><a href="tel:+19362941119">936.294.1119</a></li>
 					<li class="email"><a href="mailto:shjohnson@shsu.edu">shjohnson@shsu.edu</a></li>
-					<li class="subject">Biological Sciences, Chemistry, Engineering Technology, Geology, Physics, Science (General), Forensic Science</li>
+					<li class="subject">Biological Sciences, Chemistry, Engineering Technology, Geology, Physics, Science (General), Forensic Science, Mathematics and Statistics</li>
 				</ul>
 			</div>
 		</div>
@@ -325,7 +342,7 @@
 					<li class="title">Research & Instruction Librarian</li>
 					<li class="phone"><a href="tel:+19362943195">936.294.3195</a></li>
 					<li class="email"><a href="mailto:hmenendez@shsu.edu">hmenendez@shsu.edu</a></li>
-					<li class="subject">English, Communication Studies, Honors</li>
+					<li class="subject">Communication Studies, English, World Languages & Cultures, Honors</li>
 					<li class="profilelink"><a href="https://shsulibraryguides.org/prf.php?account_id=289261">Hannah's Profile Page</a></li>
 				</ul>
 			</div>
@@ -441,7 +458,7 @@
 			</div>
 		</div>
 </div>
-	<div class="cell vcard">
+	<!--<div class="cell vcard">
 		<div class="grid-x">
 			<div class="cell large-3 hide-for-small-only">
 				<img src="/images/headshots/Shotwell.jpg" alt="Trent Shotwell">
@@ -456,7 +473,7 @@
 				</ul>
 			</div>
 		</div>
-	</div>
+	</div>-->
 	<div class="cell vcard">
 		<div class="grid-x">
 			<div class="cell large-3 hide-for-small-only">
@@ -593,7 +610,7 @@
 				<ul>
 					<li class="fn">Morgen Clements</li>
 					<li class="title">Library Assistant II – Special Collections</li>
-					<li class="phone"><a href="tel:+19362943317">936.294.3317</a></li>
+					<li class="phone"><a href="tel:+19362943859">936.294.3859</a></li>
 					<li class="email"><a href="mailto:mxc098@shsu.edu">mxc098@shsu.edu</a></li>
 				</ul>
 			</div>
@@ -812,14 +829,14 @@
 	<div class="cell vcard">
 		<div class="grid-x">
 			<div class="cell large-3 hide-for-small-only">
-				<img src="/dotAsset/42bd67d8-8688-4dc2-9817-1b722dfe876a.png" alt="Tony Morales">
+				<img src="/dA/e98848a706/fileAsset/Morales_headshot.jpeg" alt="Tony Morales">
 			</div>
 			<div class="cell large-9">
 				<ul>
 					<li class="fn">Tony Morales</li>
 					<li class="title">Library Assistant II – Archives</li>
-					<!--<li class="phone"><a href="tel:+19362941622">936.294.1622</a></li>-->
-					<!--<li class="email"><a href="mailto:llc019@shsu.edu">llc019@shsu.edu</a></li>-->
+					<li class="phone"><a href="tel:+19362943317">936.294.3317</a></li>
+					<li class="email"><a href="mailto:btm022@shsu.edu">btm022@shsu.edu</a></li>
 				</ul>
 			</div>
 		</div>
@@ -917,12 +934,12 @@
 	<div class="cell vcard">
 		<div class="grid-x">
 			<div class="cell large-3 hide-for-small-only">
-				<img src="/dotAsset/42bd67d8-8688-4dc2-9817-1b722dfe876a.png" alt="Rebecca Richie">
+				<img src="/dA/921f0abc76/fileAsset/Richie.JPEG" alt="Rebecca Richie">
 			</div>
 			<div class="cell large-9">
 				<ul>
 					<li class="fn">Rebecca Richie</li>
-					<li class="title">Library Assistant II – Digital Initiatives</li>
+					<li class="title">Specialist II – Digital Initiatives</li>
 					<li class="phone"><a href="tel:+19362941658">936.294.1658</a></li>
 					<li class="email"><a href="mailto:rlr073@shsu.edu">rlr073@shsu.edu</a></li>
 				</ul>
