--- a/About/directory.html
+++ b/About/directory.html
@@ -1128,6 +1128,21 @@
 	<div class="cell vcard">
 		<div class="grid-x">
 			<div class="cell large-3 hide-for-small-only">
+				<img src=" /dotAsset/42bd67d8-8688-4dc2-9817-1b722dfe876a.png" alt="Susan Wiggins">
+			</div>
+			<div class="cell large-9">
+				<ul>
+					<li class="fn">Susan Wiggins</li>
+					<li class="title">Night Circulation Assistant Supervisor</li>
+					<li class="phone"><a href="tel:+19362943584">936.294.3584</a></li>
+					<li class="email"><a href="mailto:stdsrw24@shsu.edu">stdsrw24@shsu.edu</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div class="cell vcard">
+		<div class="grid-x">
+			<div class="cell large-3 hide-for-small-only">
 				<img src=" /images/headshots/wu_cropped.jpg" alt="Akira Wu">
 			</div>
 			<div class="cell large-9">
