--- a/Library Homepage/search_tabs.html
+++ b/Library Homepage/search_tabs.html
@@ -1,3 +1,11 @@
+<!--hide EDS Journal radio button-->
+<!--<style>
+  #guidedField_3,
+  label[for="guidedField_3"] {
+    display: none;
+  }
+</style>-->
+
 <!--<div class="callout orange">
     The Library Catalog will be down Saturday, 1/7/2023, but Articles &amp More will be up.
 </div>-->
@@ -139,14 +147,15 @@
         <a href="https://shsulibraryguides.org/historydatabases">History</a><br>
         <a href="https://shsulibraryguides.org/c.php?g=86719&p=558840">Kinesiology</a><br>
         <a href="https://shsulibraryguides.org/c.php?g=86852&p=558281">Library Science</a><br>
+		<a href="https://shsulibraryguides.org/MassComm">Mass Communication</a><br>
       </div>
       <div class="cell medium-4">
-				<a href="https://shsulibraryguides.org/MassComm">Mass Communication</a><br>
         <a href="https://shsulibraryguides.org/c.php?g=86703&p=558371">Mathematics</a><br>
         <a href="https://shsulibraryguides.org/c.php?g=86743&p=2282030">Music</a><br>
         <a href="https://shsulibraryguides.org/newsdb">Newspapers</a><br>
         <a href="https://shsulibraryguides.org/c.php?g=86781&p=558609">Nursing</a><br>
 				<a href="https://shsulibraryguides.org/com">Osteopathic Medicine</a><br>
+		<a href="https://shsulibraryguides.org/philosophy">Philosophy</a><br>
         <a href="https://shsulibraryguides.org/c.php?g=86717&p=558535">Physics</a><br>
         <a href="https://shsulibraryguides.org/c.php?g=86705&p=558701">Political Science</a><br>
         <a href="https://shsulibraryguides.org/psychology/db">Psychology</a><br>
