--- a/Library Homepage/Library_Sidebar_Menu(2019).html
+++ b/Library Homepage/Library_Sidebar_Menu(2019).html
@@ -79,6 +79,7 @@
       <li class="main-submenu__item main-submenu__item--parent"><a href="#" class="main-submenu__link main-submenu__link--parent">About Us</a>
         <ul class="menu vertical nested main-submenu__list main-submenu__list--nested">
           <li class="main-submenu__item"><a href="/about/hours.html" class="main-submenu__link">Hours</a></li>
+          <li class="main-submenu__item"><a href="/about/directions-parking" class="main-submenu__link">Directions & Parking</a></li>
           <li class="main-submenu__item"><a href="/about/subject.html" class="main-submenu__link">Subject Librarians</a></li>
           <li class="main-submenu__item"><a href="/about/directory.html" class="main-submenu__link">Faculty/Staff Directory</a></li>
           <li class="main-submenu__item"><a href="/about/departments/" class="main-submenu__link">Departments</a></li>
