--- a/About/directory.html
+++ b/About/directory.html
@@ -919,6 +919,21 @@
 	<div class="cell vcard">
 		<div class="grid-x">
 			<div class="cell large-3 hide-for-small-only">
+				<img src="/dotAsset/42bd67d8-8688-4dc2-9817-1b722dfe876a.png" alt="Tom Pickering">
+			</div>
+			<div class="cell large-9">
+				<ul>
+					<li class="fn">Tom Pickering</li>
+					<li class="title">Library Assistant II – Digital Initiatives</li>
+					<li class="phone"><a href="tel:+19362943017">936.294.3017</a></li>
+					<li class="email"><a href="mailto:tmp060@shsu.edu">tmp060@shsu.edu</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div class="cell vcard">
+		<div class="grid-x">
+			<div class="cell large-3 hide-for-small-only">
 				<img src="/images/headshots/Rainey.jpeg" alt="Michelle Rainey">
 			</div>
 			<div class="cell large-9">
