--- a/Services/Renewal.html
+++ b/Services/Renewal.html
@@ -40,7 +40,7 @@
 <h3>Having Problems Renewing Online?</h3>
     <ul>
         <li>
-            Use <a href="https://library.shsu.edu/services/renewtexshare.html">the online form for TexShare or Courtesy Card Holders</a> to request renewal 
+            Use <a href="https://forms.office.com/r/6JmMt0BLFT">this online form</a> to request renewal
         </li>
         <li>
             Or call the Service Desk at 936-294-1618  
